seaqt/QtCore/gen_qflags.h

class QFlag;
class QIncompatibleFlag;
typedef struct QFlag QFlag;
typedef struct QIncompatibleFlag QIncompatibleFlag;
QFlag* QFlag_new(int value);
QFlag* QFlag_new2(unsigned int value);
QFlag* QFlag_new3(short value);
QFlag* QFlag_new4(unsigned short value);
int QFlag_ToInt(const QFlag* self);
unsigned int QFlag_ToUnsignedInt(const QFlag* self);
void QFlag_delete(QFlag* self);
QIncompatibleFlag* QIncompatibleFlag_new(int i);
QIncompatibleFlag* QIncompatibleFlag_new2(QIncompatibleFlag* param1);
int QIncompatibleFlag_ToInt(const QIncompatibleFlag* self);
void QIncompatibleFlag_delete(QIncompatibleFlag* self);